--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@
                         </h2>
                         <h4>
                             <span>Creative</span> Web Designer and Developer.</h4>
-                        <p>Let me introduce myself , My name is Sajad Erfanian , I'm an Iranian web designer and developer, my
-                            responsibility is to create efficient and worthful websites for companies and individuals around
-                            the world. I can build websites using latest technology for growing exposure. Satisfying my customer
-                            by fullfilling their expectation is my goal.
+                        <p>Let me introduce myself , I'm Sajad Erfanian, web designer and developer from Iran. 
+                            My responsibility is to create effective and efficient websites for companies and individuals around the world.
+                             I use the latest technology in building websites, 
+                            and customer satisfaction is my goal.
                         </p>
-                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern
-                            websites, web services and online stores. My passion is to design digital user experiences through
-                            the bold interface. Here you could
+                        <p>My working experience covers a wide variety of project scopes including designing modern and stylish websites,
+                             web services, and online stores customized for customers of different sizes. My passion is to design digital user experiences through the bold interface. 
+                             Here you could scroll down to know more about me.
                             <span>scroll down</span> to
                             <span>know more</span> about me.
                         </p>
@@ -495,7 +495,8 @@
                                 <h3>Self Study</h3>
                                 <span class="durate">April 2018 / Continues </span>
                                 <span>selfstudyhistory</span>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab dolor est autem quo, asperiores unde necessitatibus? Facere amet accusantium error eveniet! Pariatur error esse, quos porro aliquam accusantium maiores iusto!</p>
+                                <p>I have improved following skills through self-study:
+                                    html 5-css3-scss-less- java script-Jquery-react</p>
                             </div>
                         </div>
                         <div class="exp-box wow fadeIn" data-wow-duration="0.6s" data-wow-offset="200">
@@ -504,8 +505,7 @@
                                 <h3>Arzjoo</h3>
                                 <span class="durate">June 2013 / July 2013</span>
                                 <span>cryptocurrency website</span>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil dicta incidunt excepturi
-                                    sunt? Consequatur sapiente neque enim totam.</p>
+                                <p>As a member of development team worked on Arzjoo, and B2B projects: a platform for cryptocurrency exchange transactions.</p>
                             </div>
                         </div>
                         <div class="exp-box wow fadeIn" data-wow-duration="0.6s" data-wow-offset="200">
@@ -514,8 +514,7 @@
                                 <h3>RAYAN MOBIN IRSA</h3>
                                 <span class="durate">October 2011 / October 2015</span>
                                 <span>B.Sc. Degree in Computer Science.</span>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam excepturi unde soluta nesciunt iste impedit animi ex provident itaque sit numquam totam mollitia accusamus debitis tenetur, iure labore blanditiis ipsa?
-                                </p>
+                                <p>As a member of B2B team worked on development of RMI e-marketplace project.</p>
                             </div>
                         </div>
                     </div>
@@ -660,7 +659,7 @@
                                         <div class="form-group col-md-6 validate-input" data-validate="Name is required">
                                             <label for="Input1">
                                                 <i class="fas fa-user"></i> Name*</label>
-                                            <input name="name" type="text" class="form-control input" id="Input1" placeholder="Alex Smith">
+                                            <input name="name" type="text" class="form-control input" id="Input1" placeholder="Enter your name">
                                         </div>
                                         <div class="form-group col-md-6 validate-input" data-validate="Valid email is required: ex@abc.xyz">
                                             <label for="Input2">
