--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <!-- Font Awesome CDN 
     ==================================================================-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+        integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <!-- Google Fonts CDN 
     ==================================================================-->
@@ -157,20 +157,20 @@
                     <div class="img-content">
                         <div class="my-img"></div>
                         <div class="social-links">
-                            <a href="#" target="_blank">
-                                <i class="fab fa-telegram-plane"></i>
-                            </a>
-                            <a href="#" target="_blank">
-                                <i class="fab fa-twitter"></i>
+                            <a href="https://www.linkedin.com/in/sajaderfanian/" target="_blank">
+                                <i class="fab fa-linkedin-in"></i>
                             </a>
                             <a href="#" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" target="_blank">
-                                <i class="fab fa-linkedin-in"></i>
+                                <i class="fab fa-twitter"></i>
                             </a>
                             <a href="#" target="_blank">
                                 <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fab fa-telegram-plane"></i>
                             </a>
                         </div>
                     </div>
@@ -182,14 +182,17 @@
                         </h2>
                         <h4>
                             <span>Creative</span> Web Designer and Developer.</h4>
-                        <p>Let me introduce myself , I'm Sajad Erfanian, web designer and developer from Iran. 
-                            My responsibility is to create effective and efficient websites for companies and individuals around the world.
-                             I use the latest technology in building websites, 
+                        <p>Let me introduce myself , I'm Sajad Erfanian, web designer and developer from Iran.
+                            My responsibility is to create effective and efficient websites for companies and
+                            individuals around the world.
+                            I use the latest technology in building websites,
                             and customer satisfaction is my goal.
                         </p>
-                        <p>My working experience covers a wide variety of project scopes including designing modern and stylish websites,
-                             web services, and online stores customized for customers of different sizes. My passion is to design digital user experiences through the bold interface. 
-                             Here you could scroll down to know more about me.
+                        <p>My working experience covers a wide variety of project scopes including designing modern and
+                            stylish websites,
+                            web services, and online stores customized for customers of different sizes. My passion is
+                            to design digital user experiences through the bold interface.
+                            Here you could scroll down to know more about me.
                             <span>scroll down</span> to
                             <span>know more</span> about me.
                         </p>
@@ -218,9 +221,6 @@
                 <div class="row">
                     <div class="head-services text-center">
                         <h1 class="wow zoomIn  animated" style="visibility: visible; animation-name: zoomIn;">My interests</h1>
-                        <p>
-                            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, debitis?.</span>
-                        </p>
                     </div>
                     <div id="count-par" class="count-parent">
                         <div class="col-md-3 col-sm-6">
@@ -281,7 +281,8 @@
                     <div class="head-services text-center">
                         <h1 class="wow zoomIn animated">HERE'S WHAT I'M DOING</h1>
                         <p>
-                            <span>Here are the services that I can provide for companies and individuals around the world.</span>
+                            <span>Here are the services that I can provide for companies and individuals around the
+                                world.</span>
                         </p>
                     </div>
                     <div class="box-services">
@@ -292,7 +293,8 @@
                                 <h2 class="web-dev">Web Development</h2>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 wow zoomIn animated" data-wow-duration="0.6s" data-wow-delay="0.5s">
+                        <div class="col-md-4 col-sm-6 wow zoomIn animated" data-wow-duration="0.6s"
+                            data-wow-delay="0.5s">
                             <div class="contain-box text-center">
                                 <i class="fab fa-css3"></i>
                                 <h2>Web Design</h2>
@@ -304,13 +306,15 @@
                                 <h2>Responsive</h2>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 wow zoomIn animated" data-wow-duration="0.6s" data-wow-delay="0.5s">
+                        <div class="col-md-4 col-sm-6 wow zoomIn animated" data-wow-duration="0.6s"
+                            data-wow-delay="0.5s">
                             <div class="contain-box text-center">
                                 <i class="fas fa-desktop"></i>
                                 <h2>UI/UX Design</h2>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 wow zoomIn animated" data-wow-duration="0.6s" data-wow-delay="1.5s">
+                        <div class="col-md-4 col-sm-6 wow zoomIn animated" data-wow-duration="0.6s"
+                            data-wow-delay="1.5s">
                             <div class="contain-box text-center">
                                 <i class="far fa-life-ring"></i>
                                 <h2>Support</h2>
@@ -486,7 +490,9 @@
                                 <h3>Islamic Azad University, Eslamshahr</h3>
                                 <span class="durate">September 2009 / September 2011</span>
                                 <span>The Islamic Azad University is a private university system in Iran</span>
-                                <p>Established in 1998, Islamic Azad University, Eslamshahr is a private higher education institution located in the small city of Islamshahr (population range of ...</p>
+                                <p>Established in 1998, Islamic Azad University, Eslamshahr is a private higher
+                                    education institution located in the small city of Islamshahr (population range of
+                                    ...</p>
                             </div>
                         </div>
                         <div class="exp-box wow fadeIn" data-wow-duration="0.6s" data-wow-offset="200">
@@ -505,7 +511,8 @@
                                 <h3>Arzjoo</h3>
                                 <span class="durate">December 2018 / July 2019</span>
                                 <span>cryptocurrency website</span>
-                                <p>As a member of development team worked on Arzjoo, and B2B projects: a platform for cryptocurrency exchange transactions.</p>
+                                <p>As a member of development team worked on Arzjoo, and B2B projects: a platform for
+                                    cryptocurrency exchange transactions.</p>
                             </div>
                         </div>
                         <div class="exp-box wow fadeIn" data-wow-duration="0.6s" data-wow-offset="200">
@@ -645,7 +652,8 @@
                 <div class="parent-contact">
                     <div class="contact-header text-center">
                         <h2 class="wow animated zoomIn">Contact Me.</h2>
-                        <p>Here is the form that you can send messages to me, I promise to read them as soon as possible. If
+                        <p>Here is the form that you can send messages to me, I promise to read them as soon as
+                            possible. If
                             you want to attach file of send more complex Data you could mail it to
                             <span>sajaderf92@gmail.com</span> , Thanks.</p>
                     </div>
@@ -656,30 +664,40 @@
                             <div class="contact-form">
                                 <div class="contain-form">
                                     <form class="form-contact validate-form" action="mail.php" method="POST">
-                                        <div class="form-group col-md-6 validate-input" data-validate="Name is required">
+                                        <div class="form-group col-md-6 validate-input"
+                                            data-validate="Name is required">
                                             <label for="Input1">
                                                 <i class="fas fa-user"></i> Name*</label>
-                                            <input name="name" type="text" class="form-control input" id="Input1" placeholder="Enter your name">
+                                            <input name="name" type="text" class="form-control input" id="Input1"
+                                                placeholder="Enter your name">
                                         </div>
-                                        <div class="form-group col-md-6 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+                                        <div class="form-group col-md-6 validate-input"
+                                            data-validate="Valid email is required: ex@abc.xyz">
                                             <label for="Input2">
                                                 <i class="fas fa-envelope"></i> Email Address*</label>
-                                            <input name="email" type="text" class="form-control input" placeholder="name@example.com">
+                                            <input name="email" type="text" class="form-control input"
+                                                placeholder="name@example.com">
                                         </div>
-                                        <div class="form-group col-md-6 validate-input" data-validate="Subject is required">
+                                        <div class="form-group col-md-6 validate-input"
+                                            data-validate="Subject is required">
                                             <label for="Input3">
                                                 <i class="far fa-question-circle"></i> Subject*</label>
-                                            <input name="subject" type="text" class="form-control input" placeholder="Meeting">
+                                            <input name="subject" type="text" class="form-control input"
+                                                placeholder="Meeting">
                                         </div>
-                                        <div class="form-group col-md-6 validate-input" data-validate="Service is required">
+                                        <div class="form-group col-md-6 validate-input"
+                                            data-validate="Service is required">
                                             <label for="Input4">
                                                 <i class="fas fa-cogs"></i> Service*</label>
-                                            <input name="service" type="text" class="form-control input" placeholder="Web Design">
+                                            <input name="service" type="text" class="form-control input"
+                                                placeholder="Web Design">
                                         </div>
-                                        <div class="form-group col-md-12 validate-input" data-validate="Message is required">
+                                        <div class="form-group col-md-12 validate-input"
+                                            data-validate="Message is required">
                                             <label for="Textarea3">
                                                 <i class="far fa-comment"></i> Message*</label>
-                                            <textarea name="message" class="form-control input" rows="7" placeholder="Enter your Message"></textarea>
+                                            <textarea name="message" class="form-control input" rows="7"
+                                                placeholder="Enter your Message"></textarea>
                                         </div>
                                         <button type="submit">
                                             <i class="far fa-share-square"></i> Send Message</button>
@@ -725,23 +743,20 @@
                 <div class="footer-parent">
                     <div class="col-md-12 text-center">
                         <div id="footer-social" class="social-links">
-                            <a href="#" target="_blank">
-                                <i class="fab fa-telegram-plane"></i>
-                            </a>
-                            <a href="#" target="_blank">
-                                <i class="fab fa-twitter"></i>
+                            <a href="https://www.linkedin.com/in/sajaderfanian/" target="_blank">
+                                <i class="fab fa-linkedin-in"></i>
                             </a>
                             <a href="#" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" target="_blank">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
-                            <a href="#" target="_blank">
-                                <i class="fab fa-google-plus-g"></i>
+                                <i class="fab fa-twitter"></i>
                             </a>
                             <a href="#" target="_blank">
                                 <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fab fa-telegram-plane"></i>
                             </a>
                         </div>
                         <h5 class="h5">Web Designer and Developer</h5>
@@ -773,7 +788,7 @@
     ===========================================-->
     <div id="scroll"></div>
     <!--========End Scroll Percentage==========-->
- 
+
 
 
 
