--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         </h2>
                         <h4>
                             <span>Creative</span> Web Designer and Developer.</h4>
-                        <p>Let me introduce myself , I'm Sajad Erfanian, web designer and developer from Iran.
+                        <p>I'm Sajad Erfanian, web designer and developer from Iran.
                             My responsibility is to create effective and efficient websites for companies and
                             individuals around the world.
                             I use the latest technology in building websites,
