--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                             <div class="content left">
                                 <h3>Islamic Azad University, Eslamshahr</h3>
                                 <span class="durate">September 2009 / September 2011</span>
-                                <span>The Islamic Azad University is a private university system in Iran</span>
+                                <span>B.S. in Architecture</span>
                                 <p>Established in 1998, Islamic Azad University, Eslamshahr is a private higher
                                     education institution located in the small city of Islamshahr (population range of
                                     ...</p>
@@ -510,7 +510,7 @@
                             <div class="content left">
                                 <h3>Arzjoo</h3>
                                 <span class="durate">December 2018 / July 2019</span>
-                                <span>cryptocurrency website</span>
+                                <span>front-end developer</span>
                                 <p>As a member of development team worked on Arzjoo, and B2B projects: a platform for
                                     cryptocurrency exchange transactions.</p>
                             </div>
@@ -518,9 +518,9 @@
                         <div class="exp-box wow fadeIn" data-wow-duration="0.6s" data-wow-offset="200">
                             <i class="fas fa-briefcase"></i>
                             <div class="content right">
-                                <h3>RAYAN MOBIN IRSA</h3>
+                                <h3>RM Innovation</h3>
                                 <span class="durate">July 2019 / February 2020</span>
-                                <span>B.Sc. Degree in Computer Science.</span>
+                                <span>front-end developer</span>
                                 <p>As a member of B2B team worked on development of RMI e-marketplace project.</p>
                             </div>
                         </div>
