--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="" id="logo" class="navbar-brand">my brand</a>
+                <a href="" id="logo"><img src="img/fav-icon/fav-icon.jpg" width="50" alt=""></a>
             </div>
             <div class="collapse navbar-collapse" id="navi-menu">
                 <!-- ### Navigation Menu ### -->
