add theme color tag

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
+    <!-- Meta Tags 
+    ==================================================================-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, 
     user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <!-- Meta Tags 
-    ==================================================================-->
+    <meta name="theme-color" content="black" />
     <meta name="keywords" content="bootstrap,clean,cv,minimal,onepage particle,personal,portfolio,resume,vcard ">
     <meta name="online resume" content="Resume">
     <meta name="Sajad Erfanian" content="Sajad Erfanian">
