add new experience at andishenegar

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
     <!-- Font Awesome CDN 
     ==================================================================-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-        integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <!-- Google Fonts CDN 
     ==================================================================-->
@@ -182,17 +181,11 @@
                         </h2>
                         <h4>
                             <span>Creative</span> Web Designer and Developer.</h4>
-                        <p>I'm Sajad Erfanian, web designer and developer from Iran.
-                            My responsibility is to create effective and efficient websites for companies and
-                            individuals around the world.
-                            I use the latest technology in building websites,
-                            and customer satisfaction is my goal.
+                        <p>I'm Sajad Erfanian, web designer and developer from Iran. My responsibility is to create effective and efficient websites for companies and individuals around the world. I use the latest technology in building websites, and customer
+                            satisfaction is my goal.
                         </p>
-                        <p>My working experience covers a wide variety of project scopes including designing modern and
-                            stylish websites,
-                            web services, and online stores customized for customers of different sizes. My passion is
-                            to design digital user experiences through the bold interface.
-                            Here you could scroll down to know more about me.
+                        <p>My working experience covers a wide variety of project scopes including designing modern and stylish websites, web services, and online stores customized for customers of different sizes. My passion is to design digital user experiences
+                            through the bold interface. Here you could scroll down to know more about me.
                             <span>scroll down</span> to
                             <span>know more</span> about me.
                         </p>
@@ -200,8 +193,8 @@
                             <div class="btn-link-box">
                                 <a href="#" target="_blank">
                                     <h5 class="btn-resume">
-                                        <i class="far fa-file-pdf"></i>
-                                        Resume</h5>
+                                        <i class="far fa-file-pdf"></i> Resume
+                                    </h5>
                                 </a>
                                 <a href="#contact">
                                     <h5 class="btn-work">
@@ -220,7 +213,8 @@
             <div class="container">
                 <div class="row">
                     <div class="head-services text-center">
-                        <h1 class="wow zoomIn  animated" style="visibility: visible; animation-name: zoomIn;">My interests</h1>
+                        <h1 class="wow zoomIn  animated" style="visibility: visible; animation-name: zoomIn;">My interests
+                        </h1>
                     </div>
                     <div id="count-par" class="count-parent">
                         <div class="col-md-3 col-sm-6">
@@ -293,8 +287,7 @@
                                 <h2 class="web-dev">Web Development</h2>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 wow zoomIn animated" data-wow-duration="0.6s"
-                            data-wow-delay="0.5s">
+                        <div class="col-md-4 col-sm-6 wow zoomIn animated" data-wow-duration="0.6s" data-wow-delay="0.5s">
                             <div class="contain-box text-center">
                                 <i class="fab fa-css3"></i>
                                 <h2>Web Design</h2>
@@ -306,15 +299,13 @@
                                 <h2>Responsive</h2>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 wow zoomIn animated" data-wow-duration="0.6s"
-                            data-wow-delay="0.5s">
+                        <div class="col-md-4 col-sm-6 wow zoomIn animated" data-wow-duration="0.6s" data-wow-delay="0.5s">
                             <div class="contain-box text-center">
                                 <i class="fas fa-desktop"></i>
                                 <h2>UI/UX Design</h2>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 wow zoomIn animated" data-wow-duration="0.6s"
-                            data-wow-delay="1.5s">
+                        <div class="col-md-4 col-sm-6 wow zoomIn animated" data-wow-duration="0.6s" data-wow-delay="1.5s">
                             <div class="contain-box text-center">
                                 <i class="far fa-life-ring"></i>
                                 <h2>Support</h2>
@@ -460,6 +451,12 @@
                                         <span class="plan-count">100%</span>
                                     </div>
                                 </div>
+                                <div class="skill">
+                                    <p>razor syntax reference for ASP.NET Core</p>
+                                    <div class="skill-bar plan-2 wow slideInLeft animated">
+                                        <span class="plan-count-2">60%</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -490,9 +487,8 @@
                                 <h3>Islamic Azad University, Eslamshahr</h3>
                                 <span class="durate">September 2009 / September 2011</span>
                                 <span>B.S. in Architecture</span>
-                                <p>Established in 1998, Islamic Azad University, Eslamshahr is a private higher
-                                    education institution located in the small city of Islamshahr (population range of
-                                    ...</p>
+                                <p>Established in 1998, Islamic Azad University, Eslamshahr is a private higher education institution located in the small city of Islamshahr (population range of ...
+                                </p>
                             </div>
                         </div>
                         <div class="exp-box wow fadeIn" data-wow-duration="0.6s" data-wow-offset="200">
@@ -501,8 +497,8 @@
                                 <h3>Self Study</h3>
                                 <span class="durate">April 2018 / Continues </span>
                                 <span>selfstudyhistory</span>
-                                <p>I have improved following skills through self-study:
-                                    html 5-css3-scss-less- java script-Jquery-react</p>
+                                <p>I have improved following skills through self-study: html 5-css3-scss-less- java script-Jquery-react
+                                </p>
                             </div>
                         </div>
                         <div class="exp-box wow fadeIn" data-wow-duration="0.6s" data-wow-offset="200">
@@ -511,8 +507,7 @@
                                 <h3>Arzjoo</h3>
                                 <span class="durate">December 2018 / July 2019</span>
                                 <span>front-end developer</span>
-                                <p>As a member of development team worked on Arzjoo, and B2B projects: a platform for
-                                    cryptocurrency exchange transactions.</p>
+                                <p>As a member of development team worked on Arzjoo, and B2B projects: a platform for cryptocurrency exchange transactions.</p>
                             </div>
                         </div>
                         <div class="exp-box wow fadeIn" data-wow-duration="0.6s" data-wow-offset="200">
@@ -522,6 +517,16 @@
                                 <span class="durate">July 2019 / February 2020</span>
                                 <span>front-end developer</span>
                                 <p>As a member of B2B team worked on development of RMI e-marketplace project.</p>
+                            </div>
+                        </div>
+                        <div class="exp-box wow fadeIn" data-wow-duration="0.6s" data-wow-offset="200">
+                            <i class="fas fa-briefcase"></i>
+                            <div class="content left">
+                                <h3>Andishe Negar</h3>
+                                <span class="durate">April 2020 / Agust 2020</span>
+                                <span>front-end developer <text class="color-base free-lance">(freelancer project)</text></span>
+                                <p>As a member of B2B team worked on development of Andishe Negar e-marketplace project.</p>
+                                <span class="text-danger free-lance">The project will be published soon.</span>
                             </div>
                         </div>
                     </div>
@@ -652,9 +657,7 @@
                 <div class="parent-contact">
                     <div class="contact-header text-center">
                         <h2 class="wow animated zoomIn">Contact Me.</h2>
-                        <p>Here is the form that you can send messages to me, I promise to read them as soon as
-                            possible. If
-                            you want to attach file of send more complex Data you could mail it to
+                        <p>Here is the form that you can send messages to me, I promise to read them as soon as possible. If you want to attach file of send more complex Data you could mail it to
                             <span>sajaderf92@gmail.com</span> , Thanks.</p>
                     </div>
                     <div class="contain-contact">
@@ -664,40 +667,30 @@
                             <div class="contact-form">
                                 <div class="contain-form">
                                     <form class="form-contact validate-form" action="mail.php" method="POST">
-                                        <div class="form-group col-md-6 validate-input"
-                                            data-validate="Name is required">
+                                        <div class="form-group col-md-6 validate-input" data-validate="Name is required">
                                             <label for="Input1">
                                                 <i class="fas fa-user"></i> Name*</label>
-                                            <input name="name" type="text" class="form-control input" id="Input1"
-                                                placeholder="Enter your name">
+                                            <input name="name" type="text" class="form-control input" id="Input1" placeholder="Enter your name">
                                         </div>
-                                        <div class="form-group col-md-6 validate-input"
-                                            data-validate="Valid email is required: ex@abc.xyz">
+                                        <div class="form-group col-md-6 validate-input" data-validate="Valid email is required: ex@abc.xyz">
                                             <label for="Input2">
                                                 <i class="fas fa-envelope"></i> Email Address*</label>
-                                            <input name="email" type="text" class="form-control input"
-                                                placeholder="name@example.com">
+                                            <input name="email" type="text" class="form-control input" placeholder="name@example.com">
                                         </div>
-                                        <div class="form-group col-md-6 validate-input"
-                                            data-validate="Subject is required">
+                                        <div class="form-group col-md-6 validate-input" data-validate="Subject is required">
                                             <label for="Input3">
                                                 <i class="far fa-question-circle"></i> Subject*</label>
-                                            <input name="subject" type="text" class="form-control input"
-                                                placeholder="Meeting">
+                                            <input name="subject" type="text" class="form-control input" placeholder="Meeting">
                                         </div>
-                                        <div class="form-group col-md-6 validate-input"
-                                            data-validate="Service is required">
+                                        <div class="form-group col-md-6 validate-input" data-validate="Service is required">
                                             <label for="Input4">
                                                 <i class="fas fa-cogs"></i> Service*</label>
-                                            <input name="service" type="text" class="form-control input"
-                                                placeholder="Web Design">
+                                            <input name="service" type="text" class="form-control input" placeholder="Web Design">
                                         </div>
-                                        <div class="form-group col-md-12 validate-input"
-                                            data-validate="Message is required">
+                                        <div class="form-group col-md-12 validate-input" data-validate="Message is required">
                                             <label for="Textarea3">
                                                 <i class="far fa-comment"></i> Message*</label>
-                                            <textarea name="message" class="form-control input" rows="7"
-                                                placeholder="Enter your Message"></textarea>
+                                            <textarea name="message" class="form-control input" rows="7" placeholder="Enter your Message"></textarea>
                                         </div>
                                         <button type="submit">
                                             <i class="far fa-share-square"></i> Send Message</button>
