edit content skill

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                                     </div>
                                 </div>
                                 <div class="skill">
-                                    <p>razor syntax reference for ASP.NET Core</p>
+                                    <p>razor syntax</p>
                                     <div class="skill-bar plan-2 wow slideInLeft animated">
                                         <span class="plan-count-2">60%</span>
                                     </div>
