browse color them

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="Sajad Erfanian" content="Sajad Erfanian">
     <meta name="freelancer" content="Freelancer">
     <meta name="frontend" content="Frontend">
+    <meta name="theme-color" content="#ffb300" />
     <title>Sajad-erf | Personal Website</title>
     <!-- Fav Icon
     ==================================================================-->
