--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Sajad-erf | Personal Website</title>
     <!-- Fav Icon
     ==================================================================-->
-    <link rel="shortcut icon" href="/img/fav-icon/fav-icon.jpg">
+    <link rel="shortcut icon" href="./img/fav-icon/fav-icon.jpg">
 
     <!-- Font Awesome CDN 
     ==================================================================-->
@@ -26,24 +26,24 @@
 
     <!-- Animate CSS 
     ==================================================================-->
-    <link rel="stylesheet" href="/style/animate/animate.css">
+    <link rel="stylesheet" href="./style/animate/animate.css">
 
     <!-- Bootstrap Minified CSS 
     ==================================================================-->
-    <link rel="stylesheet" href="/style/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="./style/bootstrap/bootstrap.min.css">
 
     <!-- Main CSS 
     ==================================================================-->
-    <link rel="stylesheet" href="/style/master/main.css">
+    <link rel="stylesheet" href="./style/master/main.css">
 
     <!-- OWL -->
-    <link rel="stylesheet" href="/style/OWL/owl.carousel.css">
-    <link rel="stylesheet" href="/style/OWL/owl.theme.default.css">
+    <link rel="stylesheet" href="./style/OWL/owl.carousel.css">
+    <link rel="stylesheet" href="./style/OWL/owl.theme.default.css">
 
     <!--========================================================================
         Conatct-Form-Asset
     ============================================================================-->
-    <link rel="stylesheet" href="/style/hamburgers/hamburgers.min.css">
+    <link rel="stylesheet" href="./style/hamburgers/hamburgers.min.css">
     <!--========================================================================
         Conatct-End
     ============================================================================-->
@@ -803,33 +803,33 @@
     ====================================================================-->
 
     <!-- ### JQuery ### -->
-    <script src="js/JQuery/jquery-3.6.3.min.js" type="text/javascript"></script>
+    <script src="./js/JQuery/jquery-3.6.3.min.js" type="text/javascript"></script>
 
     <!-- ### Smooth Scroll ### -->
-    <script src="js/master/smooth-scroll.js" type="text/javascript"></script>
+    <script src="./js/master/smooth-scroll.js" type="text/javascript"></script>
 
     <!-- ### Appear ### -->
-    <script src="js/master/appear.js" type="text/javascript"></script>
+    <script src="./js/master/appear.js" type="text/javascript"></script>
 
 
     <!-- ### JQuery AnimateNumber ###-->
-    <script src="js/master/animateNumber.js" type="text/javascript"></script>
+    <script src="./js/master/animateNumber.js" type="text/javascript"></script>
 
 
     <!-- ### Esay Pie Chart ### -->
-    <script src="js/master/jquery.easypiechart.min.js" type="text/javascript"></script>
+    <script src="./js/master/jquery.easypiechart.min.js" type="text/javascript"></script>
 
     <!-- ### WOW ###-->
-    <script src="js/master/wow.js" type="text/javascript"></script>
+    <script src="./js/master/wow.js" type="text/javascript"></script>
 
     <!-- ### OWL ### -->
-    <script src="js/OWL/owl.carousel.min.js" type="text/javascript"></script>
+    <script src="./js/OWL/owl.carousel.min.js" type="text/javascript"></script>
 
     <!-- ##### Bootstrap Javascript Minified ##### -->
-    <script src="js/bootstrap/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./js/bootstrap/bootstrap.min.js" type="text/javascript"></script>
 
     <!-- ##### Main Javascript ##### -->
-    <script src="js/master/main.js" type="text/javascript"></script>
+    <script src="./js/master/main.js" type="text/javascript"></script>
 </body>
 
 </html>
