--- a/index.html
+++ b/index.html
@@ -310,10 +310,8 @@
     ============================================-->
     <section id="skills">
         <div class="container-fluid">
-            <div class="row">
-
+            <div class="">
                 <!-- ### Tech Skills -->
-
                 <div id="skill-circle" class="skills-parent">
                     <div class="skills-header text-center">
                         <h2 class="wow zoomIn animated">TECHNICAL SKILLS</h2>
@@ -322,7 +320,7 @@
                         </p>
                     </div>
                     <div class="parent-circle text-center">
-                        <div class="col-md-3 col-sm-6">
+                        <div class="c-box">
                             <div class="box-circle text-center">
                                 <div class="circle html-css" data-percent="99">
                                     <h3 id="chart_num_1"></h3>
@@ -331,7 +329,7 @@
                                 <h2>HTML5 & CSS3 (Responsive Designe/mobile first)</h2>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
+                        <div class="c-box">
                             <div class="box-circle text-center">
                                 <div class="circle vue-js" data-percent="70">
                                     <h3 id="chart_num_2"></h3>
@@ -340,7 +338,7 @@
                                 <h2>Vue <span class="Learning">(🤓 Learning...)</h2>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
+                        <div class="c-box">
                             <div class="box-circle text-center">
                                 <div class="circle js-js" data-percent="40">
                                     <h3 id="chart_num_3"></h3>
@@ -349,7 +347,7 @@
                                 <h2>JAVA SCRIPT <span class="Learning">(🤓 Learning...)</h2>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
+                        <div class="c-box">
                             <div class="box-circle text-center">
                                 <div class="circle teamWork" data-percent="99">
                                     <h3 id="chart_num_4"></h3>
@@ -360,9 +358,7 @@
                         </div>
                     </div>
                 </div>
-
                 <!-- ### Other Skills -->
-
                 <div class="skills-parent">
                     <div class="skills-header text-center">
                         <h2 class="wow zoomIn animated top-for-other">OTHERS SKILLS</h2>
