--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
          2-Section Navigation
     ============================================-->
     <nav id="nav" class="navbar navbar-inverse navbar-fixed-top navbar-expand-sm">
-        <div class="container-fluid">
+        <div class="container">
             <div class="navbar-header">
                 <!-- ### Responsive Menu ### -->
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navi-menu">
