--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                             <span>My Technical Network Security and Other Skills</span>
                         </p>
                     </div>
-                    <div class="parent-bar text-center">
+                    <div class="parent-bar text-center row">
                         <div class="col-md-6">
                             <div class="wrapper">
                                 <div class="skill">
