--- a/index.html
+++ b/index.html
@@ -135,10 +135,7 @@
                             <a href="https://www.linkedin.com/in/sajaderfanian/" target="_blank">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
-                            <a href="https://github.com/erfanrqs" target="_blank">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="https://t.me/erfan_rqs" target="_blank">
+                            <a href="https://t.me/sajaderf" target="_blank">
                                 <i class="fab fa-telegram-plane"></i>
                             </a>
                         </div>
@@ -166,20 +163,12 @@
                         </p>
                         <div class="row">
                             <div class="btn-link-box">
-                                <a href="https://drive.google.com/file/d/1NMvV792XDoOpmv8UaQusi-fgGO4keNgW/view?usp=sharing"
-                                    target="_blank">
+                                <a href="" target="_blank">
                                     <h5 class="btn-resume">
                                         <i class="far fa-file-pdf">
 
                                         </i>
                                         Resume ( PDF ) 👀
-                                    </h5>
-                                </a>
-                                <a href="https://www.linkedin.com/in/sajaderfanian/" target="_blank">
-                                    <h5 class="btn-work">
-                                        <i class="fas fa-rocket">
-                                        </i>
-                                        Hire Me 😁
                                     </h5>
                                 </a>
                             </div>
@@ -509,21 +498,31 @@
                             <i class="fas fa-briefcase"></i>
                             <div class="content right">
                                 <h3>RM Innovation</h3>
-                                <span class="durate">Aug 2019 - Apr 2022 · 2 yrs 9 mos</span>
+                                <span class="durate">Aug 2019 - Aug 2021 · 2 yrs 1 mo</span>
                                 <span>front-end developer(Vue)</span>
-                                <p>As a member of B2B team worked on development of RMI e-marketplace project.</p>
+                                <p>As a member of B2B,B2C team worked on development of RMI e-marketplace project.</p>
                             </div>
                         </div>
                         <div class="exp-box wow fadeIn" data-wow-duration="0.6s" data-wow-offset="200">
                             <i class="fas fa-briefcase"></i>
                             <div class="content left">
                                 <h3>Andishe Negar</h3>
-                                <span class="durate">Dec 2021 - Aug 2022 · 9 mos</span>
+                                <span class="durate">Aug 2021 - Dec 2022 · 1 yr 5 mos</span>
                                 <span>Vue developer(mid)</span>
-                                <p>As a member of B2B team worked on development of Andishe Negar e-marketplace
+                                <p>As a member of B2C team worked on development of Andishe Negar e-marketplace
                                     project.
                                 </p>
                                 <span class="text-danger free-lance">The project will be published soon.</span>
+                            </div>
+                        </div>
+                        <div class="exp-box wow fadeIn" data-wow-duration="0.6s" data-wow-offset="200">
+                            <i class="fas fa-briefcase"></i>
+                            <div class="content right">
+                                <h3>Yektanet</h3>
+                                <span class="durate">Dec 2022 - Aug 2023 · 9 mos</span>
+                                <span>front-end developer</span>
+                                <p>As a member of development team worked on yektanet, and B2B projects: a platform for
+                                    news & ads.</p>
                             </div>
                         </div>
 
