--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <span>know more</span> about me.
                         </p>
                         <div class="row">
-                            <div class="btn-link-box">
+                            <!-- <div class="btn-link-box">
                                 <a href="" target="_blank">
                                     <h5 class="btn-resume">
                                         <i class="far fa-file-pdf">
@@ -171,7 +171,7 @@
                                         Resume ( PDF ) 👀
                                     </h5>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
