--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <meta name="keywords" content="bootstrap,clean,cv,minimal,onepage particle,personal,portfolio,resume,vcard ">
     <meta name="online resume" content="Resume">
     <meta name="Sajad Erfanian" content="Sajad Erfanian">
-    <meta name="description" content="I'm Sajad Erfanian, web designer and developer from Iran. My responsibility is to create
-    effective and efficient websites for companies and individuals around the world. I use the
-    latest technology in building websites, and customer
-    satisfaction is my goal.">
+    <meta name="description" content="I'm a
+Product designer.
+Efficient, reliable, and highly motivated with 2 years of experience ​as a UI UX Designer. Additionally, I have over 6 years of experience as a FrontEnd Developer.">
     <meta name="theme-color" content="#ffb300" />
     <title>Sajad-erf | Personal Website</title>
     <!-- Fav Icon
