--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta name="keywords" content="bootstrap,clean,cv,minimal,onepage particle,personal,portfolio,resume,vcard ">
     <meta name="online resume" content="Resume">
     <meta name="Sajad Erfanian" content="Sajad Erfanian">
-    <meta name="description" content="I'm a
+    <meta name="description"
+        content="I'm a
 Product designer.
 Efficient, reliable, and highly motivated with 2 years of experience ​as a UI UX Designer. Additionally, I have over 6 years of experience as a FrontEnd Developer.">
     <meta name="theme-color" content="#ffb300" />
@@ -63,8 +64,8 @@ Efficient, reliable, and highly motivated with 2 years of experience ​as a UI 
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="https://www.linkedin.com/in/sajaderfanian/" id="logo"><img src="img/fav-icon/fav-icon.jpg"
-                        width="50" height="52" alt="sajaderfanian my linkdin resume"></a>
+                <a id="logo"><img src="img/fav-icon/fav-icon.jpg" width="50" height="52"
+                        alt="sajaderfanian my linkdin resume"></a>
             </div>
             <div class="collapse navbar-collapse" id="navi-menu">
                 <!-- ### Navigation Menu ### -->
